"fixed a wrapping issue"

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   background-color: white;
 }
 
